# DRIVE_AGAIN

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.bash  mkdocs.yml  pyproject.toml  ros.Dockerfile  sim.py  test.py
.github/workflows/: format.yml  format_and_test.yml  lint.yml  test.yml
data_visualization_utils/: visualize_robot_trajectory.py
doc/: index.md
docs/: Architecture.md  CommandSampling.md  Drive.md  Installation.md  RecordingData.md  Robot.md  index.md
docs/images/: context_diagram.drawio  core_uml.drawio  drive_protocol.drawio  high_level_architecture.drawio
ros/: package.xml  setup.cfg  setup.py
ros/drive_ros/: diff_drive_sim.py  drive_ros_bridge.py  keyboard_teleop.py
ros/launch/: sim_demo.launch.py
src/DRIVE_AGAIN/: app.py  common.py  csv_reader.py  csv_writer.py  data_types.py  dataset_reader.py  dataset_recorder.py  drive.py  geofencing.py  keyboard_teleop.py  plot.py  robot.py  sampling.py  saveable_types.py  server.py  sim.py
src/DRIVE_AGAIN.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/DRIVE_AGAIN/data/: csv_util.py  csv_writer.py  data_util.py  dataset_recorder.py  exported_types.py  robot_data.py
src/DRIVE_AGAIN/templates/: index.html
src/DRIVE_AGAIN/tmp/: robot.json  roboticist.json  terrain.json
tests/: test_calculator.py  test_drive.py  test_geofencing.py  test_robot.py  test_sampling.py
tests/data/: test_dataset_recorder.py
ui/: .gitignore  README.md  pubspec.yaml
ui/lib/: bot_map.dart  data_points.dart  drive_socket_message.dart  main.dart
(+18 files in other folders)
