[project]
name = "DRIVE_AGAIN"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "shapely",
    "numpy==1.23",
    "black",
    "pytest",
    "numpy",
    "pynput",
    "matplotlib>=3.10.1",
    "flask-socketio",
    "flask"
]

[tool.black]
line-length = 120
